--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
+spring.profiles.active=test
 
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver class name=org.h2.Driver
-
-spring.jpa.showsql= true
-spring.jpa.properties.hibernate.format_sql= true
